--- a/guards.mdx
+++ b/guards.mdx
@@ -34,6 +34,7 @@ const modalMachine = Machine({
         view: {
           on: {
             EDIT: 'edit',
+            BACK: 'list',
           },
         },
         edit: {
@@ -78,6 +79,7 @@ const modalMachine = Machine({
         view: {
           on: {
             EDIT: 'edit',
+            BACK: 'list',
           },
         },
         edit: {
@@ -125,6 +127,7 @@ const modalMachine = Machine({
         view: {
           on: {
             EDIT: 'edit',
+            BACK: 'list',
           },
         },
         edit: {
@@ -174,6 +177,7 @@ const modalMachine = Machine({
         view: {
           on: {
             EDIT: 'edit',
+            BACK: 'list',
           },
         },
         edit: {
@@ -225,6 +229,7 @@ const modalMachine = Machine({
         view: {
           on: {
             EDIT: 'edit',
+            BACK: 'list',
           },
         },
         edit: {
@@ -276,6 +281,7 @@ const modalMachine = Machine({
         view: {
           on: {
             EDIT: 'edit',
+            BACK: 'list',
           },
         },
         edit: {
