Rename state & setState to current & setCurrent

--- a/demo-2.mdx
+++ b/demo-2.mdx
@@ -22,21 +22,22 @@ export const App = () => {
 }
 ```
 
-```js 3,6,8:9,14 title="Modal Visibility Toggle" subtitle="useState hook with state machine"
+```js 3,6,8:10,15 title="Modal Visibility Toggle" subtitle="useState hook with state machine"
 import React, { useState } from 'react'
 import { Button, Modal } from './Components'
 import { modalMachine } from './machine'
 
 export const App = () => {
-  const [state, setState] = useState(modalMachine.initialState)
+  const [current, setCurrent] = useState(modalMachine.initialState)
 
-  const handleOpen = () => setState(modalMachine.transition(state, 'OPEN'))
-  const handleClose = () => setState(modalMachine.transition(state, 'CLOSE'))
+  const handleOpen = () => setCurrent(modalMachine.transition(current, 'OPEN'))
+  const handleClose = () =>
+    setCurrent(modalMachine.transition(current, 'CLOSE'))
 
   return (
     <main class="app">
       <Button onClick={handleOpen}>Open Modal</Button>
-      <Modal onCancel={handleClose} visible={state.matches('visible')} />
+      <Modal onCancel={handleClose} visible={current.matches('visible')} />
     </main>
   )
 }
