--- a/demo-1.mdx
+++ b/demo-1.mdx
@@ -11,7 +11,7 @@ import { CodeSurferLayout } from 'code-surfer'
 
 <CodeSurferLayout>
 
-```js title="Modal Visibility Toggle"
+```jsx title="Modal Visibility Toggle"
 import React, { useState } from 'react'
 import { Button, Modal } from './Components'
 
@@ -30,7 +30,7 @@ export const App = () => {
 }
 ```
 
-```js 5,7:8,13 title="Modal Visibility Toggle" subtitle="useState hook conventional usage"
+```jsx 5,7:8,13 title="Modal Visibility Toggle" subtitle="useState hook conventional usage"
 import React, { useState } from 'react'
 import { Button, Modal } from './Components'
 
