--- a/demo-2.mdx
+++ b/demo-2.mdx
@@ -3,7 +3,7 @@ import { CodeSurferLayout } from 'code-surfer'
 
 <CodeSurferLayout>
 
-```js 5,7:8,13 title="Modal Visibility Toggle" subtitle="useState hook conventional usage"
+```jsx 5,7:8,13 title="Modal Visibility Toggle" subtitle="useState hook conventional usage"
 import React, { useState } from 'react'
 import { Button, Modal } from './Components'
 
@@ -22,7 +22,7 @@ export const App = () => {
 }
 ```
 
-```js 3,6,8:10,15 title="Modal Visibility Toggle" subtitle="useState hook with state machine"
+```jsx 3,6,8:10,15 title="Modal Visibility Toggle" subtitle="useState hook with state machine"
 import React, { useState } from 'react'
 import { Button, Modal } from './Components'
 import { modalMachine } from './machine'
