Use file-loader to load image assets
https://github.com/jxnblk/mdx-deck/issues/139#issuecomment-416011640

--- a/guards.mdx
+++ b/guards.mdx
@@ -4,7 +4,7 @@ import { Image } from '@mdx-deck/components'
 # Any missing transition?
 
 <Image
-  src="images/how-do-we-reach-the-create-state.jpg"
+  src={require('file-loader!./images/how-do-we-reach-the-create-state.jpg')}
   alt="How do we reach the create state?"
   style={{
     margin: 'auto',
