Add raw conclusion slide

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -116,35 +116,6 @@ import { Appear, Image, Notes } from 'mdx-deck'
 
 ---
 
-# Problem Domain:
+# Enough talk 🗣
 
-## Ninja Van Parcel Pickup Reservations
-
-<ul>
-  <Appear>
-    <li>Calendar View with all Reservations listed in corresponding dates</li>
-    <li>Modal View with multiple states</li>
-    <li>List View</li>
-    <li>
-      Detail View
-      <ul>
-        <li>View, Edit, & Create (for Upcoming Pickups)</li>
-        <li>View only (for Past Pickups)</li>
-      </ul>
-    </li>
-  </Appear>
-</ul>
-
----
-
-# Let's jump to the code!
-
-<ol>
-  <Appear>
-    <li>Initial state: Conditional rendering using multiple local state</li>
-    <li>
-      Problem: Complex requirements breed complex conditionals in the code
-    </li>
-    <li>Solution: State machines alternative representation</li>
-  </Appear>
-</ol>
+## Show me the code! 💻
