Add small details

--- a/conclusion.mdx
+++ b/conclusion.mdx
@@ -79,9 +79,15 @@ import { Appear } from 'mdx-deck'
 
 ---
 
+### I barely scratch the surface of State Machines concepts
+
+#### There are a lot more to learn!
+
+---
+
 # Further Reading
 
-- [xstate](https://xstate.js.org/docs/#why)
+- [xstate](https://xstate.js.org/docs/#why) for more State Machines concepts & practices
 - [Testing Trophy](https://kentcdodds.com/blog/write-tests) by Kent C. Dodds
 
 ---
