--- a/introduction.mdx
+++ b/introduction.mdx
@@ -25,7 +25,7 @@ import { Appear, Image, Notes } from 'mdx-deck'
 # What this talk is 😄
 
 - A _very_ brief introduction to State Machines
-- My personal journey with:
+- A small replica of my personal journey with:
   - State Machines, especially [xstate](https://xstate.js.org/) in particular
   - [React Hooks](https://reactjs.org/docs/hooks-intro.html)
 - **How** to combine them together
@@ -45,6 +45,8 @@ import { Appear, Image, Notes } from 'mdx-deck'
   <ul>
     <li>
       Let's assume that everybody here is familiar enough with React Hooks
+      <br />
+      Shawn Wang will also talk about it later today
     </li>
     <li>
       State Machines concepts are <em>huge</em> and it won't fit in this 30
