Remove problem slides & rename example slides into toggle slides

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -107,6 +107,12 @@ import { Appear, Image, Notes } from 'mdx-deck'
 
 ---
 
+# State Machines to the Rescue!
+
+## 🦸‍♂️ 🦸‍♀️
+
+---
+
 # Hypothesis
 
 <ul>
